--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "An authentication service built with Express.js and TypeScript",
     "main": "src/index.js",
     "scripts": {
-        "start": "node src/index.js",
+        "start": "node dist/index.js",
         "build": "tsc",
         "dev": "nodemon src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
