--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
+        "lodash": "^4.17.21",
         "mongoose": "^8.4.1",
         "pino": "^9.1.0",
         "pino-pretty": "^11.1.0",
@@ -35,6 +36,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/lodash": "^4.17.5",
         "@types/node": "^20.14.2",
         "nodemon": "^3.1.3",
         "ts-node": "^10.9.2",
