--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node dist/index.js",
         "build": "tsc",
-        "dev": "nodemon src/index.ts",
+        "dev": "nodemon -L src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
