--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lodash": "^4.17.21",
         "mongoose": "^8.4.1",
         "pino": "^9.1.0",
+        "pino-http": "^10.2.0",
         "pino-pretty": "^11.1.0",
         "zod": "^3.23.8"
     },
