--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "author": "Shabel Gumah",
     "license": "ISC",
     "dependencies": {
+        "amqplib": "^0.10.4",
         "axios": "^1.7.2",
         "bcryptjs": "^2.4.3",
         "config": "^3.3.11",
@@ -34,6 +35,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/amqplib": "^0.10.5",
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
